# adv_mla_lab_2

./: Makefile  README.md  pyproject.toml
adv_mla_lab_2/: __init__.py  dataset.py  features.py  plots.py
adv_mla_lab_2/modeling/: predict.py  train.py
models/: rf2.joblib
notebooks/: 1_baseline.ipynb  36120-25SP-Lab01_Ex02-Solutions.ipynb  36120-25SP-Lab01_Ex03-Solutions.ipynb  36120-25SP-Lab02_Ex02-Solutions.ipynb
